# anjean

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  READEME.md  README.md  compile.sh  profile2.trace  vcpkg-configuration.json  vcpkg.json  viking_room.gltf
scripts/: run.cmake
src/: init.cpp  init.h  main.cpp  snake.cpp
src/Anjean.Scripting/: Anjean.scripting.csproj  Script.cs
src/Core/: Core.h  Math.h
src/Orchestrator/: Orchestrator.cpp  Orchestrator.hpp
src/core/: AppState.h
src/core/input/: InputManager.cpp
src/core/objects/: Camera.h  CoreTypes.h  GameObject.h
src/physics/: README.md  colliders.h  physics.h  transform.h
src/rendering/: IRenderBackend.h  RenderTypes.h  Renderer.cpp  Renderer.h  RendererBackendFactory.cpp  RendererBackendFactory.h  RendererSelection.cpp  RendererSelection.h  SDL_Reference.m  Utilities.cpp  Utilities.hpp
src/rendering/backends/metal/: MetalCppImplementation.cpp  MetalRendererBackend.cpp  MetalRendererBackend.h  SOTA.cpp
src/rendering/backends/metal/shaders/: Sprite2D.metal  Triangle.metal
src/rendering/backends/vulkan/: BetterDataDesign.md  VulkanRendererBackend.cpp  VulkanRendererBackend.h
src/rendering/backends/vulkan/shaders/: shader.slang  slang.spv
src/runtime/: EntityManager.h  ModelLoader.cpp  ModelLoader.h  PhysxCct.cpp  RenderSystem.cpp  RenderSystem.h  Runtime.cpp  Runtime.h  RuntimeTypes.h
src/runtime/input/: InputManager.cpp  InputManager.h
src/runtime/objects/: CharacterController.h  Collider.h  Entity.cpp  GameObject.h  PhysicsBody.h  RectangularPrismCollider.h  Resource.h  ResourceHandle.h  ResourceManager.h  RuntimeObject.h  SphereCollider.h
src/runtime/scripting/: NativeBindings.cpp  NativeBindings.h  ScriptingEngine.cpp  ScriptingEngine.h
src/scripting/Anjean.Scripting/: Anjean.scripting.csproj  Collider.cs  ColliderCollection.cs  ColliderType.cs  GameObject.cs  GameObjectContainer.cs  Input.cs  InternalGameObject.cs  Mesh.cs  MeshData.cs  Native.cs  NativeLibraryResolver.cs  PhysicsBody.cs  PhysicsBodyType.cs  RectangularPrismCollider.cs  SceneDefinition.cs  SceneObjectDefinition.cs  ScriptHost.cs  SphereCollider.cs  Texture.cs  Transform.cs  Vec3.cs
src/window/: Window.cpp  Window.h
